# ugraph

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: pages.yml
cli/: AGENTS.md  Cargo.toml
cli/src/: main.rs  query.rs  server.rs  storage.rs
core/: .dockerignore  .env.example  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
core/crates/ugraph-cli/: Cargo.toml
core/crates/ugraph-cli/src/: main.rs  query.rs  server.rs  state.rs  storage.rs
core/crates/ugraph-core/: Cargo.toml
core/crates/ugraph-core/src/: abi.rs  decode.rs  handlers.rs  lib.rs  manifest.rs  plan.rs  rpc.rs  scan.rs  schema.rs  wasm.rs
core/crates/ugraph-node/: Cargo.toml
core/crates/ugraph-node/src/: main.rs
core/crates/ugraph-runtime/: Cargo.toml
core/crates/ugraph-runtime/src/: asc.rs  lib.rs
core/crates/ugraph-service/: Cargo.toml
core/crates/ugraph-service/src/: lib.rs  server.rs  storage.rs
core/docker/: entrypoint.sh
core/docs/: architecture.md  graph-node-compatibility.md
core/examples/growfi/: conformance.json  schema.graphql  subgraph.yaml
core/examples/growfi-mainnet/: .env.example  .gitignore  schema.graphql  subgraph.yaml
core/examples/growfi-mainnet/abis/: CampaignFactory.json  CampaignToken.json  GrowfiHarvestManager.json  GrowfiMinter.json  GrowfiToken.json  GrowfiTreasury.json  GrowfiYieldToken.json  HarvestManager.json  ProducerRegistry.json
core/examples/growfi-mainnet/src/: factory.ts
core/examples/growfi/abis/: Campaign.json  CampaignRegistry.json  GrowfiCampaign.json  GrowfiCampaignFactory.json  GrowfiCampaignRegistry.json  GrowfiFeeSplitter.json  GrowfiProducerRegistry.json  GrowfiTreasury.json  StakingVault.json
core/examples/growfi/src/: campaign.ts  factory.ts  harvest.ts  producer.ts  registry.ts  staking.ts
core/examples/growfi/src/grow/: minter.ts  splitter.ts  token.ts  treasury.ts
infra/: Dockerfile  README.md  docker-compose.yml
infra/gcp/e2-micro/: .env.example  Caddyfile  README.md  docker-compose.yml
infra/gcp/e2-micro/chains/: base-sepolia.yaml  ethereum.yaml  sepolia.yaml
infra/gcp/e2-micro/scripts/: deploy-chain.sh  deploy.sh  destroy.sh  startup.sh  status.sh
landing/: CNAME  index.html  styles.css
