[package]
name = "ugraph-node"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "ugraph-node"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
ugraph-core = { path = "../ugraph-core" }
ugraph-runtime = { path = "../ugraph-runtime" }
ugraph-service = { path = "../ugraph-service" }
