[package]
name = "ugraph-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hex.workspace = true
num-bigint.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tiny-keccak.workspace = true
thiserror.workspace = true
ugraph-core = { path = "../ugraph-core" }
wasmtime.workspace = true
