[package]
name = "ugraph-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
hex.workspace = true
postgres.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tiny-keccak.workspace = true
ugraph-core = { path = "../ugraph-core" }
ugraph-runtime = { path = "../ugraph-runtime" }
